# CASTiR

./: README.md
geant4_simulation_dataGen/: CMakeLists.txt  CastorCombiner  MCEventDict_rdict.pcm  README.md  SteppingAction.cc  phytoPETsim.cc  run.mac  test.cdh
geant4_simulation_dataGen/Misc/: DetectorConstruction.cc  appender  myComments
geant4_simulation_dataGen/energy_spectra/: .txt  16MV_otto_1990.txt  6MV_baker_1997.txt  C11-Blanco.txt  C11Gonzalez_spectra.txt  C11Gonzalez_spectra1.txt  C11Levin_spectra.txt  C11LoirecAntinormalized_spectra.txt  C11LoirecNormalized_spectra.txt  C11LoirecUndernormalized_spectra.txt  C11Loirec_spectra.txt  C11_spectra.txt  Cu64_spectra.txt  F18-Blanco-Spectra.txt  F18-Levin_Hoffman-Spectra.txt  F18-RKraus_Spectra.txt  F18-Sanchez2016.txt  F18_spectra.txt  F18_spectraNEW.txt  N13-Blanco.txt  N13Gonzalez_spectra.txt  N13_spectra.txt  O15-Blanco-Spectra.txt  O15Gonzalez_spectra.txt  O15Loirec_spectra.txt  O15_spectra.txt  energy_sampler.C  energy_sampler.cc  pinacle_10MV.txt  pinacle_18MV.txt  pinacle_6MV.txt
geant4_simulation_dataGen/include/: DataManager.hh  DataManager.hh~  DetectorConstruction.hh  DetectorConstruction.hh~  MCEvent.hh  MCEventLinkDef.h  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SteppingAction.hh  SteppingAction.hh~
geant4_simulation_dataGen/macro/: vis.mac  vis.mac~
geant4_simulation_dataGen/src/: DataManager.cc  DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  MCEvent.cc  MCEventDict.cc  MCEventDict_rdict.pcm  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SteppingAction.cc
input_file_tools/CASToR/: PET_URNIDDL_PHYTOPET.hscan  PET_URNIDDL_PHYTOPET.lut  cdf_parser.cc  lut_parser.cc
input_file_tools/STIR/: MySTIR_Simulation_crystal_map.txt  list-mode_reader.cc
reconstruction/: README.md
reconstruction/CASToR/: CASToR_it6.hdr  CASToR_sensitivity.hdr
reconstruction/STIR/: MySTIR_Simulation.hs  MySTIR_Simulation_f1g1d0b0.hs  MySimulation_OSMAPOSL.par  Terminal-Log.txt  listmode_input_SAFIR.par  lm_to_projdata.par  out_file_24.ahv  out_file_24.hv  sens.ahv  sens.hv
